tests/dataset/tpc-ds/compiler/cpp/q74.error
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:75:12: error: ‘c’ was not declared in this scope
   75 |   decltype(c.c_customer_id) id;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:75:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:76:12: error: ‘c’ was not declared in this scope
   76 |   decltype(c.c_first_name) first;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:76:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:77:12: error: ‘c’ was not declared in this scope
   77 |   decltype(c.c_last_name) last;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:77:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:78:12: error: ‘d’ was not declared in this scope; did you mean ‘id’?
   78 |   decltype(d.d_year) year;
      |            ^
      |            id
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:78:12: error: ‘d’ was not declared in this scope; did you mean ‘id’?
   78 |   decltype(d.d_year) year;
      |            ^
      |            id
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:81:12: error: ‘c’ was not declared in this scope
   81 |   decltype(c) c;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:81:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:82:12: error: ‘ss’ was not declared in this scope
   82 |   decltype(ss) ss;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:82:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:83:12: error: ‘d’ was not declared in this scope
   83 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:83:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:98:12: error: ‘c’ was not declared in this scope
   98 |   decltype(c) c;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:98:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:99:12: error: ‘ws’ was not declared in this scope; did you mean ‘std::ws’?
   99 |   decltype(ws) ws;
      |            ^~
      |            std::ws
In file included from /usr/include/c++/13/istream:1106,
                 from /usr/include/c++/13/iostream:42,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:2:
/usr/include/c++/13/bits/istream.tcc:1070:5: note: ‘std::ws’ declared here
 1070 |     ws(basic_istream<_CharT, _Traits>& __in)
      |     ^~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:99:12: error: ‘ws’ was not declared in this scope; did you mean ‘std::ws’?
   99 |   decltype(ws) ws;
      |            ^~
      |            std::ws
/usr/include/c++/13/bits/istream.tcc:1070:5: note: ‘std::ws’ declared here
 1070 |     ws(basic_istream<_CharT, _Traits>& __in)
      |     ^~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:100:12: error: ‘d’ was not declared in this scope
  100 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:100:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:107:38: error: ‘struct __struct6’ has no member named ‘customer_id’
  107 |   decltype(std::declval<__struct6>().customer_id) customer_id;
      |                                      ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:107:38: error: ‘struct __struct6’ has no member named ‘customer_id’
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:108:38: error: ‘struct __struct6’ has no member named ‘customer_first_name’
  108 |   decltype(std::declval<__struct6>().customer_first_name) customer_first_name;
      |                                      ^~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:108:38: error: ‘struct __struct6’ has no member named ‘customer_first_name’
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:109:38: error: ‘struct __struct6’ has no member named ‘customer_last_name’
  109 |   decltype(std::declval<__struct6>().customer_last_name) customer_last_name;
      |                                      ^~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:109:38: error: ‘struct __struct6’ has no member named ‘customer_last_name’
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:330:57: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  330 |               auto __key = YearTotal{c.c_customer_id, c.c_first_name,
      |                                                       ~~^~~~~~~~~~~~
      |                                                         |
      |                                                         std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:335:49: error: cannot convert ‘Customer’ to ‘int’ in initialization
  335 |                   __g.items.push_back(__struct6{c, ss, d});
      |                                                 ^
      |                                                 |
      |                                                 Customer
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:342:61: error: cannot convert ‘Customer’ to ‘int’ in initialization
  342 |                     __key, std::vector<__struct6>{__struct6{c, ss, d}}});
      |                                                             ^
      |                                                             |
      |                                                             Customer
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:342:70: error: no matching function for call to ‘std::vector<__struct6>::vector(<brace-enclosed initializer list>)’
  342 |                     __key, std::vector<__struct6>{__struct6{c, ss, d}}});
      |                                                                      ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:7:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; value_type = std::vector<__struct6>::value_type; allocator_type = std::allocator<__struct6>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; allocator_type = std::allocator<__struct6>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:353:67: error: request for member ‘ss_net_paid’ in ‘std::declval<__struct6>().__struct6::ss’, which is of non-class type ‘int’
  353 |                 std::vector<decltype(std::declval<__struct6>().ss.ss_net_paid)>
      |                                                                   ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:353:67: error: request for member ‘ss_net_paid’ in ‘std::declval<__struct6>().__struct6::ss’, which is of non-class type ‘int’
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:353:79: error: template argument 1 is invalid
  353 |                 std::vector<decltype(std::declval<__struct6>().ss.ss_net_paid)>
      |                                                                               ^
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:353:79: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:356:27: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  356 |                   __items.push_back(x.ss.ss_net_paid);
      |                           ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:356:42: error: request for member ‘ss_net_paid’ in ‘x.__struct6::ss’, which is of non-class type ‘int’
  356 |                   __items.push_back(x.ss.ss_net_paid);
      |                                          ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:352:17:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:351:42: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  351 |                 return std::accumulate(v.begin(), v.end(), 0.0);
      |                                        ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:351:53: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  351 |                 return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                   ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:375:57: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  375 |               auto __key = YearTotal{c.c_customer_id, c.c_first_name,
      |                                                       ~~^~~~~~~~~~~~
      |                                                         |
      |                                                         std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:380:49: error: cannot convert ‘Customer’ to ‘int’ in initialization
  380 |                   __g.items.push_back(__struct9{c, ws, d});
      |                                                 ^
      |                                                 |
      |                                                 Customer
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:387:61: error: cannot convert ‘Customer’ to ‘int’ in initialization
  387 |                     __key, std::vector<__struct9>{__struct9{c, ws, d}}});
      |                                                             ^
      |                                                             |
      |                                                             Customer
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:387:70: error: no matching function for call to ‘std::vector<__struct9>::vector(<brace-enclosed initializer list>)’
  387 |                     __key, std::vector<__struct9>{__struct9{c, ws, d}}});
      |                                                                      ^
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct9; _Alloc = std::allocator<__struct9>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; allocator_type = std::allocator<__struct9>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; std::__type_identity_t<_Alloc> = std::allocator<__struct9>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; allocator_type = std::allocator<__struct9>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; allocator_type = std::allocator<__struct9>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; std::__type_identity_t<_Alloc> = std::allocator<__struct9>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; size_type = long unsigned int; value_type = std::vector<__struct9>::value_type; allocator_type = std::allocator<__struct9>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; size_type = long unsigned int; allocator_type = std::allocator<__struct9>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; allocator_type = std::allocator<__struct9>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct9; _Alloc = std::allocator<__struct9>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:398:67: error: request for member ‘ws_net_paid’ in ‘std::declval<__struct9>().__struct9::ws’, which is of non-class type ‘int’
  398 |                 std::vector<decltype(std::declval<__struct9>().ws.ws_net_paid)>
      |                                                                   ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:398:67: error: request for member ‘ws_net_paid’ in ‘std::declval<__struct9>().__struct9::ws’, which is of non-class type ‘int’
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:398:79: error: template argument 1 is invalid
  398 |                 std::vector<decltype(std::declval<__struct9>().ws.ws_net_paid)>
      |                                                                               ^
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:398:79: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:401:27: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  401 |                   __items.push_back(x.ws.ws_net_paid);
      |                           ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:401:42: error: request for member ‘ws_net_paid’ in ‘x.__struct9::ws’, which is of non-class type ‘int’
  401 |                   __items.push_back(x.ws.ws_net_paid);
      |                                          ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:397:17:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:396:42: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  396 |                 return std::accumulate(v.begin(), v.end(), 0.0);
      |                                        ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:396:53: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  396 |                 return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                   ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:318:39: error: ‘concat’ was not declared in this scope; did you mean ‘wcsncat’?
  318 |   std::vector<__struct6> year_total = concat(
      |                                       ^~~~~~
      |                                       wcsncat
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:412:17: error: ‘struct __struct6’ has no member named ‘sale_type’
  412 |       if (!(((y.sale_type == std::string("s")) && (y.year == 1998))))
      |                 ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:412:54: error: ‘struct __struct6’ has no member named ‘year’
  412 |       if (!(((y.sale_type == std::string("s")) && (y.year == 1998))))
      |                                                      ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:409:22: error: ‘first’ was not declared in this scope
  409 |   auto s_firstyear = first(([&]() {
      |                      ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:421:17: error: ‘struct __struct6’ has no member named ‘sale_type’
  421 |       if (!(((y.sale_type == std::string("s")) && (y.year == 1999))))
      |                 ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:421:54: error: ‘struct __struct6’ has no member named ‘year’
  421 |       if (!(((y.sale_type == std::string("s")) && (y.year == 1999))))
      |                                                      ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:430:17: error: ‘struct __struct6’ has no member named ‘sale_type’
  430 |       if (!(((y.sale_type == std::string("w")) && (y.year == 1998))))
      |                 ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:430:54: error: ‘struct __struct6’ has no member named ‘year’
  430 |       if (!(((y.sale_type == std::string("w")) && (y.year == 1998))))
      |                                                      ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:439:17: error: ‘struct __struct6’ has no member named ‘sale_type’
  439 |       if (!(((y.sale_type == std::string("w")) && (y.year == 1999))))
      |                 ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:439:54: error: ‘struct __struct6’ has no member named ‘year’
  439 |       if (!(((y.sale_type == std::string("w")) && (y.year == 1999))))
      |                                                      ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq742062244990/001/prog.cpp:451:70: error: no matching function for call to ‘std::vector<Result>::vector(<brace-enclosed initializer list>)’
  451 |                                         s_secyear.customer_last_name}}
      |                                                                      ^
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = Result; _Alloc = std::allocator<Result>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>; std::__type_identity_t<_Alloc> = std::allocator<Result>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>; std::__type_identity_t<_Alloc> = std::allocator<Result>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = Result; _Alloc = std::allocator<Result>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; size_type = long unsigned int; value_type = Result; allocator_type = std::allocator<Result>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; size_type = long unsigned int; allocator_type = std::allocator<Result>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Result; _Alloc = std::allocator<Result>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
